@@ -1,5 +1,3 @@
-TODO drop .beta callouts in internals.conf before release
-
 v1.6 | Feb 00 2017:
 [New] added curated set of YARA webshell & malware signatures for use with ClamAV >= 0.99b
 [New] added cleaner rule 'VistorTracker.Mob'
@@ -21,6 +19,9 @@ v1.6 | Feb 00 2017:
       these values can also be defined in sysconfig or cron/exec based config files and on CLI
 [New] sysconfig support through '/etc/sysconfig/maldet'  or '/etc/default/maldet', system dependant, to 
       allow easier configuration overrides; all conf.maldet and internals.conf variables supported
+[Change] file stat calls replaced with function file_stat
+[Change] stat calls are now (Free|Net)BSD compatible through file_stat function
+[Change] report listing, '-e|--report list', now displays scan run time
 [Change] scan reports and cli outputs once again display simplified path definitions instead of expanded paths
 [Change] unified all clamav selection logic for data paths, running clamd processes, clam(d)scan CLI options etc...
          into a single function, clamselector(); this will make clam behavior more predictable across all functions
@@ -58,7 +59,7 @@ v1.6 | Feb 00 2017:
 [Change] .ca.def configuration template renamed importconf and now copied over during installation to
          'internals/importconf'
 [Change] new versions of 'chown' don't support use of . (dot) to separate user and group
-[Change] swap FreeBSD detection from '$OSTYPE' to 'uname -s'
+[Change] find option regextype is now dropped on FreeBSD for compatibility
 [Change] scan.tpl reporting template handles column spacing on filenames with spaces better
 [Change] CLI usage semantics of --include-regex and --exclude-regex now consistently passing to 'find' command
 [Change] moved all internal field separator line break modifications to lbreakifs()
@@ -77,6 +78,10 @@ v1.6 | Feb 00 2017:
 [Change] clamscan will now respect scan_max_filesize value instead of hardcoded 5M
 [Change] default scan_max_filesize increased from 768k to 2048k
 [Change] clamscan max-scansize for archive depth set as scan_max_filesize*2
+[Fix] improved special character argument escaping for -a|-r options that could have caused arbitrary command
+      executions in environments where LMD was allowed to be called by non-root users and/or set-uid/gid wrappers
+[Fix] FreeBSD calls to 'md5 -q' were being incorrectly escaped causing file names to never pass and return valid
+      md5 hash string; corrected by preprending 'eval' to the md5 command callouts.
 [Fix] corrected typo with import_* variables causing configuration imports to fail
 [Fix] suppress eout() output for certain import_*() and get_remote_file() calls; this was causing
       false-positive hits for modsec integration
@@ -126,3 +131,4 @@ v1.6 | Feb 00 2017:
 [Fix] multiplying maldet monitor processes due to 'ps' command expansion under parent bash process on CentOS6
 [Fix] added default installation path to ignore_inotify to prevent monitor looping when '/' is scoped into
       monitoring mode; results in notify log filling disk space
+[Fix] importconf was not importing the value for import_config_url
