@@ -28,7 +28,7 @@ wget_proxy=""
 
 wget=`which wget 2> /dev/null`
 
-if [ "$(echo $OSTYPE | egrep 'FreeBSD')" ]; then
+if [ "$OSTYPE" == "FreeBSD" ]; then
 	md5sum="/sbin/md5 -q"
 else
 	md5sum=`which md5sum 2> /dev/null`
@@ -51,6 +51,7 @@ ionice=`which ionice 2> /dev/null`
 wc=`which wc 2> /dev/null`
 mail=`which mail 2> /dev/null`
 pidof=`which pidof 2> /dev/null`
+sed=`which sed 2> /dev/null`
 stat=`which stat 2> /dev/null`
 logger=`which logger 2> /dev/null`
 clamscan_extraopts=""
@@ -93,10 +94,10 @@ lmd_versionsion_file="$inspath/VERSION"
 lmd_version="$ver"
 lmd_referer="LMD:$ver:$hostid"
 lmd_hash_file="$inspath/internals/VERSION.hash"
-lmd_hash_url="https://cdn.rfxn.com/downloads/maldet.current.hash.beta"
-lmd_version_url="https://cdn.rfxn.com/downloads/maldet.current.ver.beta"
+lmd_hash_url="https://cdn.rfxn.com/downloads/maldet.current.hash"
+lmd_version_url="https://cdn.rfxn.com/downloads/maldet.current.ver"
 lmd_current_tgzbase_url="https://cdn.rfxn.com/downloads"
-lmd_current_tgzfile="maldetect-1.6.tar.gz"
+lmd_current_tgzfile="maldetect-current.tar.gz"
 
 clamav_paths="/usr/local/cpanel/3rdparty/share/clamav/ /var/lib/clamav/ /var/clamav/ /usr/share/clamav/ /usr/local/share/clamav"
 tlog="$libpath/tlog"
@@ -114,3 +115,8 @@ email_subj="maldet alert from $(hostname)"
 cron_custom_exec="$confpath/cron/custom.cron"
 cron_custom_conf="$confpath/cron/conf.maldet.cron"
 compatcnf="$libpath/compat.conf"
+
+if [ "$OSTYPE" == "FreeBSD" ]; then
+	sed="$sed -E"
+	find_opts=""
+fi
